--- a/day02/src/assets/css/index.css
+++ b/day02/src/assets/css/index.css
@@ -1,3 +1,11 @@
-body{
-    background:url('../images/logo.png') 400px 200px no-repeat;
+@font-face {
+    font-family: "webfont";
+    font-display: swap;
+    src: url("webfont.woff") format("woff"); /* chrome、firefox */
 }
+  
+body {
+    font-family: "webfont" !important;
+    background: url("../images/logo.png") 400px 200px no-repeat;
+}
+  
